@@ -3,7 +3,7 @@ plugins {
     id 'application'
 }
 
-group = 'org.example'
+group = 'by.biruin'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -14,16 +14,22 @@ project.ext.lwjglVersion = "3.4.1"
 project.ext.jomlVersion = "1.10.9"
 project.ext.lwjglNatives = "natives-windows"
 
+run {
+    jvmArgs += '--enable-native-access=lwjgl,lwjgl.glfw'
+}
+
 dependencies {
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
     implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
 
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.21.1'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.0'
+    implementation 'org.projectlombok:lombok:1.18.42'
+    annotationProcessor 'org.projectlombok:lombok:1.18.42'
 
+    implementation 'tools.jackson.core:jackson-core:3.2.0'
+    implementation 'tools.jackson.core:jackson-databind:3.2.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.21'
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-assimp"
     implementation "org.lwjgl:lwjgl-freetype"
@@ -46,9 +52,10 @@ dependencies {
 }
 
 application {
-    mainClass = 'org.example.Main'
+    mainClass = 'by.niruin.Main'
 }
 
 test {
+    jvmArgs += '--enable-native-access=lwjgl,lwjgl.glfw'
     useJUnitPlatform()
 }
